# AI-Browser-Automation

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.kiro/hooks/: enforce-conventions-on-write.kiro.hook  load-conventions-on-prompt.kiro.hook  verify-after-task.kiro.hook
.kiro/skills/: browser-engine-creator.md  llm-provider-creator.md  python-module-creator.md
.kiro/specs/ai-browser-automation/: design.md  requirements.md  tasks.md
.kiro/specs/iterative-execution-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: design-patterns.md  project-structure.md  python-conventions.md  security-rules.md
ai_browser_automation/: __init__.py  app.py  main.py
ai_browser_automation/browser/: __init__.py  base.py  factory.py  playwright_engine.py  selenium_engine.py
ai_browser_automation/core/: __init__.py  action_executor.py  iterative_executor.py  nl_processor.py  task_planner.py
ai_browser_automation/exceptions/: __init__.py  errors.py
ai_browser_automation/interfaces/: __init__.py  chat_interface.py
ai_browser_automation/llm/: __init__.py  base.py  bedrock_provider.py  factory.py  gemini_provider.py  lm_studio_provider.py  openai_provider.py  router.py
ai_browser_automation/models/: __init__.py  actions.py  config.py  conversation.py  intents.py
ai_browser_automation/security/: __init__.py  security_layer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/properties/: test_config_properties.py  test_conversation_properties.py  test_execution_properties.py  test_iterative_execution_properties.py  test_routing_properties.py  test_security_properties.py
tests/unit/: __init__.py  test_app.py  test_models.py  test_security_layer.py
tests/unit/browser/: test_factory.py  test_playwright_engine.py  test_selenium_engine.py
tests/unit/core/: test_action_executor.py  test_iterative_executor.py  test_nl_processor.py  test_task_planner.py
tests/unit/llm/: test_factory.py  test_providers.py  test_router.py
tests/unit/security/: test_security_layer.py
